# Quorum-Coding-Challenge

./: README.md  manage.py  pyproject.toml
legislative/: admin.py  models.py  tests.py  urls.py  views.py
legislative/management/commands/: import_bill_csv.py  import_legislator_csv.py  import_vote_csv.py  import_vote_result_csv.py
legislative/migrations/: 0001_initial.py  0002_alter_bill_primary_sponsor.py
legislative/templates/legislative/: bill.html  legislator.html
quorum/: asgi.py  settings.py  urls.py  wsgi.py
