[tool.poetry]
name = "quorum-coding-challenge"
version = "0.1.0"
description = ""
authors = ["quaxsze <plum.stanislas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
